Updated the website according to most recent developments for the pipeline

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="col-md-2"></div>
             <!-- /.col-md-8 -->
             <div class="col-md-12">
-                <h1>Reference-free deconvolution of complex DNA methylation data - a detailed protocol</h1>
+                <h1>Reference-free deconvolution, visualization and interpretation of complex DNA methylation data using <i>DecompPipeline</i>, <i>MeDeCom</i> and <i>FactorViz</i></h1>
                 <p>DNA methylation assays are typically performed on bulk tissue samples, which show substantial cellular heterogeneity. To dissect these heterogeneous DNA methylomes, several deconvolution approaches have been proposed (for a list of tools see <a href="https://github.com/lutsik/CellTypeInferenceMethods">this GitHub page</a>). Reference-free deconvolution tools do not rely on purified cell type profiles, and address heterogeneity in an unbiased way. These methods rely on high-quality data and pose challenges for the interpretation of deconvolution results. We propse a three-stage protocol to perform reference-free deconvolution of complex DNA methylation data:</p>
             </div>
             <!-- /.col-md-4 -->
@@ -88,7 +88,7 @@
         <div class="row">
             <div class="col-md-5">
                 <h2>Data preparation</h2>
-                <p>Input DNA methylation data either obtained from bisulfite sequencing technologies (BED files) or the Illumina Infinium BeadArrays (IDAT files) are processed using the <a href="https://rnbeads.org"><i>RnBeads</i></a> sofware package. The data set is checked for quality using <i>RnBeads'</i> reporting functionality, and then filtered according to user-specified options, which removes intensity/coverage outliers, or annotated single nucleotide polymorphisms. These steps are compiled in the comprehensive software suite <a href="https://github.com/CompEpigen/DecompPipeline"><i>DecompPipeline</i></a>. Confounding factors are addressed for using Independent Component Analysis (ICA).</p>
+                <p>Input DNA methylation data either obtained from bisulfite sequencing technologies (BED files) or the Illumina Infinium BeadArrays (IDAT files) are processed using the <a href="https://rnbeads.org"><i>RnBeads</i></a> sofware package. The data set is checked for quality using <i>RnBeads'</i> reporting functionality, and then filtered according to user-specified options, which removes intensity/coverage outliers, or annotated single nucleotide polymorphisms. These steps are compiled in the comprehensive software suite <a href="https://github.com/CompEpigen/DecompPipeline"><i>DecompPipeline</i></a>. Confounding factors are addressed for using <a href="https://gitlab.com/biomodlih/consica/tree/master/">Independent Component Analysis (ICA)</a>.</p>
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-3">
@@ -113,7 +113,7 @@
         <div class="row extra-top-padding">
             <div class="col-md-12">
                 <h2>Developers</h2>
-                <p>The protocol has been mainly developed by <a href="https://www.dkfz.de/en/CanEpi/staff/Lutsik.html">Pavlo Lutsik</a> and <a href="https://bioinf.mpi-inf.mpg.de/homepage/index.php?&account=mscherer">Michael Scherer</a> in close collaboration with <a href="https://www.lih.lu/crp/publications/department/lih-luxembourg-institute-of-health-1408/author/petr-nazarov-166">Petr Nazarov</a>. Further contributions have been made by Reka Toth, Shashwat Sahay, Valentin Maurer, Tony Kaoma, Christoph Plass, Thomas Lengauer, and J&ouml;rn Walter. The developers hold positions at the <a href="http://epigenetik.uni-saarland.de/de/home/">Department of Genetics/Epigenetics at Saarland University</a>, at the <a href="https://www.dkfz.de/en/CanEpi/index.php"> Divsion of Cancer Epigenomics at the German Cancer Research Center</a>, at the <a href="https://www.lih.lu/page/departments/qbu-quantitative-biology-unit-1368">Quantitative Biology Unit at Luxembourg Insitute of Health</a> and at the <a href="https://www.mpi-inf.mpg.de/departments/research-group-computational-biology/">Research Group Computational Biology at the Max Planck Insitute for Informatics</a>. The project is supported by the <a href="http://www.deutsches-epigenom-programm.de/">German Epigenome Program</a> and <a href="https://www.denbi.de/">de.NBI-epi</a>.</p>
+                <p>The protocol has been mainly developed by <a href="https://www.dkfz.de/en/CanEpi/staff/Lutsik.html">Pavlo Lutsik</a> and <a href="https://bioinf.mpi-inf.mpg.de/homepage/index.php?&account=mscherer">Michael Scherer</a> in close collaboration with <a href="https://www.lih.lu/crp/publications/department/lih-luxembourg-institute-of-health-1408/author/petr-nazarov-166">Petr Nazarov</a>. Further contributions have been made by Reka Toth, Shashwat Sahay, Valentin Maurer, Tony Kaoma, Christoph Plass, Thomas Lengauer, and J&ouml;rn Walter. The developers hold positions at the <a href="http://epigenetik.uni-saarland.de/de/home/">Department of Genetics/Epigenetics at Saarland University</a>, at the <a href="https://www.dkfz.de/en/CanEpi/index.php"> Divsion of Cancer Epigenomics at the German Cancer Research Center</a>, at the <a href="https://www.lih.lu/page/departments/qbu-quantitative-biology-unit-1368">Quantitative Biology Unit at Luxembourg Insitute of Health</a> and at the <a href="https://www.mpi-inf.mpg.de/departments/research-group-computational-biology/">Research Group Computational Biology at the Max Planck Insitute for Informatics</a>. The project is supported by the <a href="http://www.deutsches-epigenom-programm.de/">German Epigenome Program</a>, <a href="https://www.denbi.de/">de.NBI-epi</a>, and <a href="https://syscid.eu">SYSCID</a>.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -122,27 +122,28 @@
 
         <div class="row">
             <div class="col-md-3">
-                <img class="img-responsive" src="images/mpii_150x75px.png" alt="">
+                <a href="https://www.mpi-inf.mpg.de/departments/research-group-computational-biology/"><img class="img-responsive" src="images/mpii_150x75px.png" alt=""></a>
             </div>
             <div class="col-md-3">
-                <img class="img-responsive" src="images/uds_150x75px.png" alt="">
+                <a href="http://epigenetik.uni-saarland.de/de/home/"><img class="img-responsive" src="images/uds_150x75px.png" alt=""></a>
             </div>
 			<div class="col-md-3">
-                <img class="img-responsive" src="images/dkfz_150x75px.png" alt="">
-            </div>
+                <a href="https://www.dkfz.de/en/CanEpi/index.php"><img class="img-responsive" src="images/dkfz_150x75px.png" alt="">
+            </div></a>
 			<div class="col-md-3">
-                <img class="img-responsive" src="images/LIH.png" alt="">
+                <a href=""https://www.lih.lu/page/departments/qbu-quantitative-biology-unit-1368><img class="img-responsive" src="images/LIH.png" alt=""></a>
             </div>
 		</div>
 		<div class="row">
 		    <div class="col-md-3"></div>
             <div class="col-md-3">
-                <img class="img-responsive" src="images/DEEP-Logo.png" alt="">
+                <a href="http://www.deutsches-epigenom-programm.de/"><img class="img-responsive" src="images/DEEP-Logo.png" alt=""></a>
             </div>
             <div class="col-md-3">
-                <img class="img-responsive" src="images/denbi_150x75px.png" alt="">
+                <a href="https://www.denbi.de/"><img class="img-responsive" src="images/denbi_150x75px.png" alt=""></a>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-3">
+<a href="https://syscid.eu/"><img class="img-responsive" src="images/syscid.png" alt=""></a></div>
         </div>
         <!-- /.row -->
 
@@ -152,7 +153,7 @@
     <!-- Footer -->
     <hr>
     <footer class="py-5 bg-inverse">
-        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2019 </p>
+        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2020 </p>
         </div>
     </footer>
 
