Small updates on the protocols and website in general

--- a/resources.html
+++ b/resources.html
@@ -209,7 +209,7 @@ http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
         <!-- /.row -->
 
 	<h2>Plotting scripts</h2>
-		<p>The table below describes scripts that have been used to generate the plots shown within the protocol.</p>
+		<p>The table below describes scripts that have been used to generate the plots shown within the protocol. All scripts are expected to be invoked in the working directory created during the execution of the protocol.</p>
         <div class="row">
            <div class="col-md-12">               
                <table class="table table-hover">
@@ -269,7 +269,7 @@ http://epigenomics.dkfz.de/downloads/DecompProtocol/FactorViz_outputs.tar.gz
     <!-- Footer -->
     <hr>
     <footer class="py-5 bg-inverse">
-        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2019 </p>
+        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2020 </p>
         </div>
     </footer>
 
