Included reference to new publication

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div class="row">
 		     <div class="col-md-12">
                 <h2>Publication</h2>
-                <p>The protocol has been published as a preprint on <i>bioRxiv</i> (<a href="https://doi.org/10.1101/853150">https://doi.org/10.1101/853150</a>).</a></p>
+                <p>The protocol has been published in <a href="https://www.nature.com/articles/s41596-020-0369-6"><i>Nature Protocols, 2020</i></a></p>
             </div>
 		</div>
         <div class="row extra-top-padding">
