Updated contact and year

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!-- Footer -->
     <hr>
     <footer class="py-5 bg-inverse">
-        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:mscherer@mpi-inf.mpg.de">Support</a> 2020 </p>
+        <div class="container">           <p class="m-0 text-center text-white">Copyright &copy; <a href="mailto:michael.scherer@crg.eu">Support</a> 2021 </p>
         </div>
     </footer>
 
